# platform.core.uifw.libpepper-efl

./: .gitignore  AUTHORS  COPYING  Makefile.am  TODO  configure.ac  libpepper-efl.pc.in
doc/pepper/: pepper-class  pepper-class-input  sequence-input  sequence-input-send  sequence-shell-init  sequence-surface-create  sequence-surface-update  sequence-view-create
doc/pepper-efl/: class  sequence-app  sequence-init  sequence-pepper-efl-client-connect  sequence-pepper-efl-client-disconnect  sequence-pepper-efl-deinit  sequence-pepper-efl-init  sequence-pepper-efl-input  sequence-pepper-efl-resize
m4/: efl_beta.m4  efl_eo.m4
packaging/: libpepper-efl.spec
src/: Makefile.am  input.h  log.h  object.c  object.h  sample_home.c  shell.c  shell.h  surface.c  test-pepper-efl.c
src/examples/: Makefile.am  entry_sample.c  pepper_efl_example.c  pepper_efl_simple.c  run_damage.sh  run_shm.sh  thread_sample.c  touch_sample.c  weston-simple-damage  weston-simple-shm
src/lib/: Makefile.am  Pepper_Efl.h  compositor.c  input.c  input.h  log.c  log.h  object.c  object.h  output.c  output.h  pepper_efl_comp.c  pepper_efl_comp.eo  pepper_object.c  pepper_object.eo  private.h  shell.c  shell.h  surface.c  surface.h
src/lib/extensions/: tizen_policy.c  tizen_policy.h
